[package]
name = "supra-seal-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.26"
bincode = "1.1.2"
# `blst` is not used from Rust directly, but it's needed as it will make sure the library is
# available for being linked.
blst = "0.3.11"
chrono = "0.4"
fil_logger = "0.1.7"
hex = "0.4.3"
log = "0.4.20"
serde = { version = "1.0.183", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = "1.0.105"

[build-dependencies]
find_cuda_helper = "0.2.0"

[target."cfg(target_arch = \"aarch64\")".dependencies]
sha2 = { version = "0.10.2", features = ["compress", "asm"] }
[target."cfg(not(target_arch = \"aarch64\"))".dependencies]
sha2 = { version = "0.10.2", features = ["compress"] }
